<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_basket"
        android:enabled="true"
        android:orderInCategory="3"
        android:showAsAction="always"/>
    
    <item
        android:id="@+id/menu_default"
        android:icon="@drawable/icn_actionbar_menu"
        android:orderInCategory="4"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_catalog"
                android:icon="@drawable/icn_actionbar_catalog"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_catalog">
            </item>
            <item
                android:id="@+id/menu_search"
                android:icon="@drawable/icn_actionbar_search"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_search">
            </item>
            <item
                android:id="@+id/menu_shops"
                android:icon="@drawable/icn_actionbar_shops"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_shops">
            </item>
            <!-- 
            <item
                android:id="@+id/menu_f1"
                android:icon="@drawable/icn_actionbar_services"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_f1">
            </item>
             -->
            <item
                android:id="@+id/menu_personal"
                android:icon="@drawable/icn_actionbar_personal"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_personal">
            </item>
            <item
                android:id="@+id/menu_qr"
                android:icon="@drawable/icn_actionbar_scanner"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_qr">
            </item>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/icn_actionbar_about"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_about">
            </item>
            <item
                android:id="@+id/menu_feedback"
                android:icon="@drawable/icn_actionbar_feedback"
                android:showAsAction="ifRoom|withText"
                android:title="@string/actionbar_feedback">
            </item>
        </menu>
    </item>

</menu>